<resources>
    <string name="app_name">My Movies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="share">share</string>

    <string name="menu_home">Explore</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="TextPassword">Password</string>
    <string name="TextUsername">Email / Username</string>
    <string name="textSignUp">- Sign Up -</string>
    <string name="textLogin">Login</string>
    <string name="textPasswordVerify">Reenter Password</string>
    <string name="textRegister">Submit</string>
    <string name="textRememberMe">Remember Me</string>
    <string name="textUsersName">User\'s Name</string>
    <string name="textUsersEmail">User\'s Email</string>
</resources>